# GreenCycleDetections

./: .gitignore  LICENSE  README.md  convert_to_onnx.py  convert_v3.py  convert_v4.py  educational_text.md  final_convert.py  index.html  klasifikasi.py  patch_and_convert.py  pyproject.toml  requirements.txt  script.js  simple_convert.py  style.css  vercel-trigger.txt  vercel.json
Assets/: style.css
api/: index.py
utils/: preprocessing.py
