[project]
name = "green-cycle-detections"
version = "0.1.0"
requires-python = ">=3.9,<3.12"
dependencies = [
    "tensorflow-cpu==2.15.0",
    "tf-keras==2.15.0",
    "numpy==1.26.4",
    "Pillow==10.2.0",
    "opencv-python-headless==4.9.0.80",
    "fastapi==0.111.0",
    "uvicorn==0.30.1",
    "python-multipart==0.0.9",
    "h5py==3.10.0"
]

[tool.uv]
managed = true
